--- a/Content.Client/Paper/UI/PaperWindow.xaml
+++ b/Content.Client/Paper/UI/PaperWindow.xaml
@@ -1,6 +1,7 @@
 <paper:PaperWindow xmlns="https://spacestation14.io"
     xmlns:paper="clr-namespace:Content.Client.Paper.UI"
     xmlns:paper220="clr-namespace:Content.Client.SS220.Paper.UI"
+    xmlns:pin220="clr-namespace:Content.Client.SS220.UserInterface.System.PinUI"
     MouseFilter="Stop" Resizable="True" MinSize="150 150"
     SetSize="510 660"> <!-- Provide some reasonable sizes by default. Can be changed by the component -->
 
@@ -13,7 +14,12 @@
 
     <BoxContainer Name="ContentsRoot" Orientation="Vertical">
         <PanelContainer StyleClasses="AngleRect" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="6">
-            <TextureButton Name="CloseButton" StyleClasses="windowCloseButton"/>
+            <!-- SS220 Pin button begin -->
+            <BoxContainer Orientation="Horizontal">
+                <pin220:PinButton Name="PinButton" Margin="0 0 5 0"/>
+                <TextureButton Name="CloseButton" StyleClasses="windowCloseButton"/>
+            </BoxContainer>
+            <!-- SS220 Pin button end -->
         </PanelContainer>
         <PanelContainer Name="PaperBackground" StyleClasses="PaperDefaultBorder" VerticalExpand="True" HorizontalExpand="True">
             <ScrollContainer Name="ScrollingContents" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalExpand="True" VerticalExpand="True" HScrollEnabled="False">
