--- a/Content.Client/SS220/CultYogg/FungusMachine/FungusMachineMenu.xaml
+++ b/Content.Client/SS220/CultYogg/FungusMachine/FungusMachineMenu.xaml
@@ -3,22 +3,23 @@
     xmlns="https://spacestation14.io"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
+    xmlns:co="clr-namespace:Content.Client.UserInterface.Controls"
     xmlns:style="clr-namespace:Content.Client.Stylesheets">
     <BoxContainer Orientation="Vertical">
-        <LineEdit Name="SearchBar" PlaceHolder=""
-                  HorizontalExpand="True"  Margin ="4 4" Access="Public"/>
-        <ItemList Name="FungusContents"
-                  SizeFlagsStretchRatio="8"
-                  VerticalExpand="True"
-                  ItemSeparation="2"
-                  Margin="4 0"
-                  SelectMode="Button"
-                  StyleClasses="transparentBackgroundItemList">
-        </ItemList>
-         <!-- Footer -->
+        <LineEdit Name="SearchBar"
+                  PlaceHolder=""
+                  HorizontalExpand="True"
+                  Margin="4 4"
+                  Access="Public"/>
+        <co:SearchListContainer Name="FungusContents"
+                                VerticalExpand="True"
+                                Margin="4 4"/>
+        <!-- Footer -->
         <BoxContainer Orientation="Vertical">
-            <PanelContainer StyleClasses="LowDivider" />
-            <BoxContainer Orientation="Horizontal" Margin="10 2 5 0" VerticalAlignment="Bottom">
+            <PanelContainer StyleClasses="LowDivider"/>
+            <BoxContainer Orientation="Horizontal"
+                          Margin="10 2 5 0"
+                          VerticalAlignment="Bottom">
             </BoxContainer>
         </BoxContainer>
     </BoxContainer>
